--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Computers</title>
 </head>
 <body>
-    <button id = 'hello' onclick="alert('hello there');"></button>
+    <button id = 'hello' onclick="alert('hello there');"> Hello</button>
 </body>
 </html>
