--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Computers</title>
 </head>
 <body>
-    <button id = 'hello' onclick="alert('hello there');"> Hello</button>
+    <pre>
+        Welcome to my site!
+        Click here for me to introduce you to my site <a href = "https://shauryacomputers.tech/personal.html">Introduction</a>
+    </pre>
 </body>
 </html>
