--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <pre>
         Welcome to my site!
-        Click here for me to introduce you to my site <a href = "https://shauryacomputers.tech/personal.html">Introduction</a>
+        Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">Introduction</a>
     </pre>
 </body>
 </html>
