--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computers</title>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <pre>
+    <pre id = "intro">
         Welcome to my site!
         Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">Introduction</a>
     </pre>
