--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <pre id = "intro">
         Welcome to my site!
-        Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">Introduction</a>
+        Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">About</a>
     </pre>
 </body>
 </html>
