--- a/personal.html
+++ b/personal.html
@@ -7,6 +7,6 @@
     <title>About</title>
 </head>
 <body>
-    <img src = "https://shauryateaches.tech/images/picture_of_myself.png" alt = "Shaurya" width = "300" height = "500">
+    <img src = "https://shauryacomputers.tech/picture_of_myself.png" alt = "Shaurya" width = "300" height = "500">
 </body>
 </html>
