--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <pre id = "intro">
+    <pre class = "text">
         Welcome to my site!
         Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">About</a>
     </pre>
