--- a/personal.html
+++ b/personal.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <script src = "script.js"></script>
 </head>
 <body>
+    <button onclick = 'goBackToMainPage();'>Go Back To Main Page</button>
     <img src = "https://shauryacomputers.tech/picture_of_myself.png" alt = "Shaurya" width = "300" height = "300">
 </body>
 </html>
