--- a/personal.html
+++ b/personal.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <script src = "script.js"></script>
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
     <button onclick = 'goBackToMainPage();'>Go Back To Main Page</button>
-    <img src = "https://shauryacomputers.tech/picture_of_myself.png" alt = "Shaurya" width = "300" height = "300">
+    <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture" alt = "Shaurya" width = "300" height = "300">
 </body>
 </html>
