--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
-    <button onclick = 'goBackToMainPage();'>Go Back To Main Page</button>
-    <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture" alt = "Shaurya" width = "300" height = "300">
+    <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
+    <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "300" height = "300">
 </body>
 </html>
