--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <script src = "script.js"></script>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel = "stylesheet" href = "https://shauryacomputers.tech/styles.css">
 </head>
 <body>
     <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
