--- a/personal.html
+++ b/personal.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <script src = "script.js"></script>
-    <link rel = "stylesheet" href = "https://shauryacomputers.tech/styles.css">
+    <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
     <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
-    <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "300" height = "300">
+    <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "150" height = "150">
 </body>
 </html>
