--- a/personal.html
+++ b/personal.html
@@ -13,7 +13,7 @@
     <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
     <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "250" height = "250">
     <pre class="text" id = "about">
-        Hello! My name is Shaurya Singh and you should know some things about myself.
+        Hello! My name is Shaurya Singh and you should know some things about me.
         First off, I have two cats. Second, I have a very annoying sister named Jhanvi.
         And third, I'm in the 5th grade.
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
