--- a/personal.html
+++ b/personal.html
@@ -15,7 +15,7 @@
     <pre class="text" id = "about">
         Hello! My name is Shaurya Singh and you should know some things about me.
         First off, I have two cats. Second, I have a very annoying sister named Jhanvi.
-        And third, I'm in the 5th grade.
+        And third, I'm in 5th grade.
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
         And that's about it.
     </pre>
