--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computers</title>
+    <script src = "script.js"></script>
     <link rel = "stylesheet" href = "styles.css">
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
 </head>
 <body>
     <pre class = "text">
         Welcome to my site!
-        Click here for me to introduce you to my site: <a href = "https://shauryacomputers.tech/personal.html">About</a>
+        Click here for me to introduce you to my site: <button onclick = "goToLink('https://shauryacomputers.tech/personal.html">About</button>
     </pre>
 </body>
 </html>
