--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <pre class = "text">
         Welcome to my site!
-        Click here for me to introduce you to my site: <button onclick = "goToLink('https://shauryacomputers.tech/personal.html')">About</button>
+        Click here for me to introduce you to my site: <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');">About</button>
     </pre>
 </body>
 </html>
