--- a/personal.html
+++ b/personal.html
@@ -10,7 +10,7 @@
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
 </head>
 <body>
-    <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>sGo Back To Main Page</button>
+    <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
     <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "250" height = "250">
     <pre class="text" id = "about">
         Hello! My name is Shaurya Singh and you should know some things about me.
@@ -19,5 +19,7 @@
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
         And that's about it.
     </pre>
+    <h1>My Projects</h1>
+    
 </body>
 </html>
