--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <script src = "script.js"></script>
-    <link rel = "stylesheet" href = "https://shauryacomputers.tech/styles.css">
+    <link rel = "stylesheet" href = "styles.css">
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
 </head>
 <body>
@@ -19,7 +19,16 @@
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
         And that's about it.
     </pre>
-    <h1>My Projects</h1>
+    <div id = "my-projects">
+        <h1>Projects</h1>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/BacteriaJumper.zip');">Bacteria Jumper</button>
+        <br>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/AirplaneShooter.zip');">Airplane Shooter</button>
+        <br>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/CandyDropper.zip');">Candy Dropper</button>
+        <br>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/EndlessRunner.zip');">Endless Runner</button>
+    </div>
     
 </body>
 </html>
