--- a/personal.html
+++ b/personal.html
@@ -17,7 +17,7 @@
         First off, I have two cats. Second, I have a very annoying sister named Jhanvi.
         And third, I'm in 5th grade.
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
-        And that's about it.
+        By the way, here's a link to a 2048 game(I did not make it, I cloned it from a GitHub repository): <button onclick = "goToLink('https://shauryacomputers.tech/2048/index.html');">2048</button>
     </pre>
     <div id = "my-projects">
         <h1>Projects</h1>
