--- a/personal.html
+++ b/personal.html
@@ -17,17 +17,17 @@
         First off, I have two cats. Second, I have a very annoying sister named Jhanvi.
         And third, I'm in 5th grade.
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
-        By the way, here's a link to a 2048 game(I did not make it, I cloned it from a GitHub repository): <button onclick = "goToLink('https://shauryacomputers.tech/2048/index.html');">2048</button>
+        And that's about it.
     </pre>
     <div id = "my-projects">
         <h1>Projects</h1>
-        <button onclick="goToLink('https://shauryacomputers.tech/games/BacteriaJumper.zip');">Bacteria Jumper</button>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/BacteriaJumper.zip');">Download ⬇️ Bacteria Jumper</button>
         <br>
-        <button onclick="goToLink('https://shauryacomputers.tech/games/AirplaneShooter.zip');">Airplane Shooter</button>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/AirplaneShooter.zip');">Download ⬇️ Airplane Shooter</button>
         <br>
-        <button onclick="goToLink('https://shauryacomputers.tech/games/CandyDropper.zip');">Candy Dropper</button>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/CandyDropper.zip');">Download ⬇️ Candy Dropper</button>
         <br>
-        <button onclick="goToLink('https://shauryacomputers.tech/games/EndlessRunner.zip');">Endless Runner</button>
+        <button onclick="goToLink('https://shauryacomputers.tech/games/EndlessRunner.zip');">Download ⬇️ Endless Runner</button>
     </div>
     
 </body>
