--- a/personal.html
+++ b/personal.html
@@ -18,6 +18,8 @@
         And third, I'm in 5th grade.
         I made this website. The github repository is <a href = "https://github.com/hi2vi/REACH-Passion-Project-Website">https://github.com/hi2vi/REACH-Passion-Project-Website</a>.
         And that's about it.
+        Make sure to visit the github repository❗
+        A lot of important information is on there.
     </pre>
     <div id = "my-projects">
         <h1>Projects</h1>
