--- a/personal.html
+++ b/personal.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <button onclick = 'goBackToMainPage();' class = 'goBackToMainPage'>Go Back To Main Page</button>
+    <button onclick = 'goToLink("https://shauryacomputers.tech/demonic_shaurya.png");'>Fanfic Picture</button>
     <img src = "https://shauryacomputers.tech/picture_of_myself.png" id = "picture-of-myself" alt = "Shaurya" width = "250" height = "250">
     <pre class="text" id = "about">
         Hello! My name is Shaurya Singh and you should know some things about me.
