--- a/personal.html
+++ b/personal.html
@@ -24,6 +24,7 @@
         Make sure to visit the github repository❗
         A lot of important information is on there.
     </pre>
+    <!--
     <div id = "my-projects">
         <h1>Projects</h1>
         <button onclick="goToLink('https://shauryacomputers.tech/games/BacteriaJumper.zip');">Download ⬇️ Bacteria Jumper</button>
@@ -34,6 +35,6 @@
         <br>
         <button onclick="goToLink('https://shauryacomputers.tech/games/EndlessRunner.zip');">Download ⬇️ Endless Runner</button>
     </div>
-    
+    Can't add my projects or else it will be blocked on school computers.-->
 </body>
 </html>
