Add icon image citation

--- a/copyright.html
+++ b/copyright.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang = "en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Citations for Images/Text/Media</title>
+    <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
+    <link rel = "stylesheet" href = "styles.css">
+  </head>
+  
+  <body>
+    <pre id = "citations">
+      Icon image: <button onclick  = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
