Add citation for icon

--- a/copyright.html
+++ b/copyright.html
@@ -12,3 +12,6 @@
   <body>
     <pre id = "citations">
       Icon image: <button onclick  = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
+    </pre>
+  </body>
+</html>
