--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <pre class = "text">
         Welcome to my site!
         Click here for me to introduce you to my site: <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');">About</button>
-        Sources for all images; <button onclick = "goToLink('https://shauryacomputers.tech/copyright.html');">Sources</button>
+        Sources for all images: <button onclick = "goToLink('https://shauryacomputers.tech/copyright.html');">Sources</button>
     </pre>
 </body>
 </html>
