--- a/copyright.html
+++ b/copyright.html
@@ -7,11 +7,12 @@
     <title>Citations for Images/Text/Media</title>
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
     <link rel = "stylesheet" href = "styles.css">
+    <script src = "script.js"></script>
   </head>
   
   <body>
     <pre id = "citations">
-      Icon image: <button onclick  = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
+      Icon image: <button id = "icon-citation">Icon</button>
     </pre>
   </body>
 </html>
