Fixed bugs for copyright.html and script.js

--- a/copyright.html
+++ b/copyright.html
@@ -12,7 +12,7 @@
   
   <body>
     <pre id = "citations">
-      Icon image: <button id = "icon-citation">Icon</button>
+      Icon image: <button onclick = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
     </pre>
   </body>
 </html>
