--- a/index.html
+++ b/index.html
@@ -3,17 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=dsevice-width, initial-scale=1.0">
     <title>Computers</title>
     <script src = "script.js"></script>
     <link rel = "stylesheet" href = "styles.css">
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
 </head>
 <body>
+    <div id="menu-bar">
+        <button onclick = "goToLink('https://shauryacomputers.tech/copyright.html');" class="menu-item" id = "menu-1">Sources</button>
+        <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');" class = "menu-item" id = "menu-2">About</button>
+    </div>
     <pre class = "text">
+
+
+
         Welcome to my site!
-        Click here for me to introduce you to my site: <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');">About</button>
-        Sources for all images: <button onclick = "goToLink('https://shauryacomputers.tech/copyright.html');">Sources</button>
     </pre>
 </body>
 </html>
