Need to add a button to go back to the main page

--- a/copyright.html
+++ b/copyright.html
@@ -11,6 +11,7 @@
   </head>
   
   <body>
+    <!-- Add a go back to main page button -->
     <pre id = "citations">
       Icon image: <button onclick = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
     </pre>
