--- a/copyright.html
+++ b/copyright.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <button class = 'goBackToMainPage' onclick = 'goToLink("https://shauryacomputers.tech");'>Go Back To Main Page</button>
+    <button class = 'goBackToMainPage' onclick = 'goBackToMainPage();'>Go Back To Main Page</button>
     <pre id = "citations">
       Icon image: <button onclick = "goToLink('https://www.flaticon.com/free-icon/binary-code_2115955');">Icon</button>
     </pre>
