--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=dsevice-width, initial-scale=1.0">
     <title>Computers</title>
     <script src = "script.js"></script>
-    <link rel = "stylesheet" href = "styles.css">
+    <link rel = "stylesheet" href = "https://shauryacomputers.tech/styles.css">
     <link rel = "icon" type = "image/x-icon" href = "https://shauryacomputers.tech/icon.png">
 </head>
 <body>
