--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 
 
         Welcome to my site!
+        Did you know that my friend Vihaan also has a website for his Passion Project(check the <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');">About</button>)
+        The link is <button onclick = "goToLink('https://vishnukamasamudram.wixsite.com/moneycraft');">About</button>
     </pre>
 </body>
 </html>
