--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         Welcome to my site!
         Did you know that my friend Vihaan also has a website for his Passion Project(check the <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');">About</button>)
-        The link is <button onclick = "goToLink('https://vishnukamasamudram.wixsite.com/moneycraft');">About</button>
+        The link is <button onclick = "goToLink('https://vishnukamasamudram.wixsite.com/moneycraft');">Moneycraft</button>
     </pre>
 </body>
 </html>
