Added newlines to "kbrdshrtcts.html"

--- a/kbrdshrtcts.html
+++ b/kbrdshrtcts.html
@@ -11,6 +11,7 @@
 
     <h2>Chrome Keyboard Shortcuts(for Windows)</h2>
 
+    <pre>
     Ctrl-T: New Tab
 
     Ctrl-X: Cut and Copy
@@ -42,7 +43,7 @@
     Ctrl-1: Go to first tab
 
     Ctrl-2: Go to second tab
-    
+
     Ctrl-3: Go to third tab
 
     Ctrl-4: Go to fourth tab
@@ -56,6 +57,7 @@
     Ctrl-8: Go to eighth tab
 
     Ctrl-9: Go to last tab open 
+    </pre>
 
 </body>
 </html>
