Added "kbrdshrtcts.html" to the menu bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div id="menu-bar">
         <button onclick = "goToLink('https://shauryacomputers.tech/copyright.html');" class="menu-item" id = "menu-1">Sources</button>
         <button onclick = "goToLink('https://shauryacomputers.tech/personal.html');" class = "menu-item" id = "menu-2">About</button>
+        <button onclick = "goToLink('https://shauryacomputers.tech/kbrdshrtcts.html');" class = "menu-item" id = "menu-3">Keyboard Shortcuts</button>
     </div>
     <pre class = "text">
 
