Submit button made visible

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <input id="third-question"><br><br>
         </form>
 
-        <button onclick="submitForm()" id="submitbtn" style="visibility: hidden;">Submit</button>
+        <button onclick="submitForm()" id="submitbtn" style="visibility: visible;">Submit</button>
     </pre>
     <script>
         function checkInputEmpty() {
