--- a/copyright.html
+++ b/copyright.html
@@ -12,7 +12,7 @@
   
   <body>
     <button class = 'goBackToMainPage' onclick = 'goBackToMainPage();'>Go Back To Main Page</button><br>
-    <pre id = "citations">
+    <pre id = "citations" style = "font-size:1vw;">
       <h2>Notes</h2>
       What might go on the website:
       In 1956, a program called "Sensorama" kick started Virtual Reality. <u>Life in The Future</u>, by Holly Cefrey.
