--- a/kbrdshrtcts.html
+++ b/kbrdshrtcts.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel  =   "stylesheet" href="styles.css">
+    <script type = "text/javascript" src="script.js"></script>
     <title>Keyboard Shortcuts</title>
 </head>
 <body>
+    <button onclick = 'goBackToMainPage()'>Go Back To Main Page</button>
     <h1> Keyboard Shortcuts </h1>
 
     <h2>Chrome Keyboard Shortcuts(for Windows)</h2>
