--- a/my-coding.html
+++ b/my-coding.html
@@ -14,6 +14,7 @@
     <pre>
         <button onclick = 'goToLink("https://drive.google.com/file/d/11ZfWEHIvuU7XySGdcqBsJ1VS3braFxU9/view?usp=drive_link")'>Tic Tac Toe AI</button>
         <button onclick = 'goToLink("https://drive.google.com/file/d/1l6wtNXTT_GiiDan0zZV3-e7YkJQU43-1/view?usp=drive_link")'>Tic Tac Toe AI Game</button>
+        <button onclick = 'goToLink("https://www.youtube.com/watch?v=_qgnKc_JYKA")'>How To Put the Pieces Together To Code Tic Tac Toe</button>
     </pre>
 </body>
 </html>
