--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         Welcome to my site!
         Did you know that my friend Vihaan also has a website for his Passion Project (check the <button onclick="goToLink('https://shauryacomputers.tech/personal.html');">About</button>)
         The link is <button onclick="goToLink('https://vishnukamasamudram.wixsite.com/moneycraft');">Moneycraft</button>
+        Also, do you want to check out my spacebar clicker?
+        Well, the link for that is <button onclick = "goToLink('https://shauryacomputers.tech/clicker/clicky.html');">CLICKY</button>
 
         So, you wanted to learn more about computers?
         Welp, you can't escape now!
